src/test/deca/syntax/parser/valid/cast_subclass_to_class.deca
// Parser test, cast a subclass cast in class

class Personne {

}

class Roi extends Personne {

}

{
    Roi roi = new Roi();
    Personne aussiUnePersonne = (Personne) (roi);
}