src/test/deca/syntax/parser/invalid/class_definition_symbole_after.deca
// Parser test, class with a special caracter in its name declared

class aClass# {
    
}